[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robopack-cli"
version = "0.1.0"
description = "Production-ready CLI for Robopack app, package, tenant, and template APIs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.9,<4.0",
]

[project.scripts]
robopack = "robopack_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
